--- a/GatewayNode/Gateway_Node.ioc
+++ b/GatewayNode/Gateway_Node.ioc
@@ -48,7 +48,10 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -83,34 +86,40 @@ PB1.GPIO_Label=RST
 PB1.Locked=true
 PB1.PinState=GPIO_PIN_SET
 PB1.Signal=GPIO_Output
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB12.GPIO_Label=Fan_SW
+PB12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB12.Locked=true
-PB12.Signal=GPIO_Input
-PB13.GPIOParameters=GPIO_Label
+PB12.Signal=GPXTI12
+PB13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB13.GPIO_Label=Next_State
+PB13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB13.Locked=true
-PB13.Signal=GPIO_Input
-PB14.GPIOParameters=GPIO_Label
+PB13.Signal=GPXTI13
+PB14.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB14.GPIO_Label=Prev_State
+PB14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB14.Locked=true
-PB14.Signal=GPIO_Input
-PB15.GPIOParameters=GPIO_Label
+PB14.Signal=GPXTI14
+PB15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PB15.GPIO_Label=Manual
+PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB15.Locked=true
-PB15.Signal=GPIO_Input
+PB15.Signal=GPXTI15
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=DIO0
 PB2.Locked=true
 PB2.Signal=GPXTI2
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=Water_pump
+PB3.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB3.GPIO_Label=Light_SW
+PB3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB3.Locked=true
-PB3.Signal=GPIO_Input
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=Light_SW
+PB3.Signal=GPXTI3
+PB4.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB4.GPIO_Label=Water_pump
+PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB4.Locked=true
-PB4.Signal=GPIO_Input
+PB4.Signal=GPXTI4
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -142,8 +151,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Gateway_Node.ioc
-ProjectManager.ProjectName=Gateway_Node
+ProjectManager.ProjectFileName=GateWay_Node.ioc
+ProjectManager.ProjectName=GateWay_Node
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -152,7 +161,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -174,12 +183,24 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CalculateBaudRate=9.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
